# backend/src/routes/userRoutes.ts
@@ -1,0 +1,13 @@
+import { Router } from 'express';
+import UserController from '../controllers/userController';
+import { authMiddleware } from '../middleware/authMiddleware';
+
+const router = Router();
+
+router.get('/', authMiddleware, UserController.getAllUsers);
+router.post('/', UserController.createUser);
+router.get('/:id', authMiddleware, UserController.getUserById);
+router.put('/:id', authMiddleware, UserController.updateUser);
+router.delete('/:id', authMiddleware, UserController.deleteUser);
+
+export default router;
